--- a/README
+++ b/README
@@ -23,7 +23,7 @@ electronics projects.  See YouTube Channel:
   and file names do not match the video.  I did some cleaning up before
   uploading to github.
 
-./raspi_mcp4131:
+./raspi_mcp4131: https://youtu.be/KReZy8y35OM
   This video discusses how the MCP4131 digital potentiomer uses SPI
   in an unusual bidirectional way.  It also shows how to use SPIDEV
   on a Raspberry Pi (model Zero tested) to command the MCP4131.
